syntax = "proto3";

package com.pojtinger.felix.liwasc;

import "google/protobuf/empty.proto";

option go_package = "github.com/pojntfx/liwasc/pkg/proto";

service NetworkAndNodeScanService {
  rpc TriggerNetworkScan(NetworkScanTriggerMessage)
      returns (NetworkScanReferenceMessage);
  rpc TriggerNodeScan(NodeScanTriggerMessage)
      returns (NodeScanReferenceMessage);
  // Use -1 as NetworkScanID to return the latest finished scan
  rpc SubscribeToNewNodes(NetworkScanReferenceMessage)
      returns (stream DiscoveredNodeMessage);
  // Use -1 as NodeScanID to return the latest finished scan
  rpc SubscribeToNewOpenServices(NodeScanReferenceMessage)
      returns (stream DiscoveredServiceMessage);
}

message NetworkScanTriggerMessage { int64 Timeout = 1; }

message NetworkScanReferenceMessage { int64 NetworkScanID = 1; }

message NodeScanTriggerMessage {
  string MACAddress = 1;
  int64 Timeout = 2;
}

message NodeScanReferenceMessage { int64 NodeScanID = 1; }

message DiscoveredNodeMessage {
  // NodeScanID is the ID of the running node scan to subscribe to
  int64 NodeScanID = 1;
  LucidNodeMessage LucidNode = 2;
}

message DiscoveredServiceMessage {
  string ServiceName = 1;
  int64 PortNumber = 2;
  string TransportProtocol = 3;
  string Description = 4;
  string Assignee = 5;
  string Contact = 6;
  string RegistrationDate = 7;
  string ModificationDate = 8;
  string Reference = 9;
  string ServiceCode = 10;
  string UnauthorizedUseReported = 11;
  string AssignmentNotes = 12;
}

service NodeWakeService {
  rpc TriggerNodeWake(NodeWakeTriggerMessage)
      returns (NodeWakeReferenceMessage);
  rpc SubscribeToNodeWakeUp(NodeWakeReferenceMessage)
      returns (stream LucidNodeMessage);
}

message NodeWakeTriggerMessage {
  string MACAddress = 1;
  int64 Timeout = 2;
}

message NodeWakeReferenceMessage { int64 NodeWakeID = 1; }

message LucidNodeMessage {
  bool PoweredOn = 1;
  string MACAddress = 2;
  string IPAddress = 3;
  string Vendor = 4;
  repeated DiscoveredServiceMessage Service = 5;
  string Registry = 6;
  string Organization = 7;
  string Address = 8;
  bool Visible = 9;
}
